<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.UserActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/personal_data_title" />

    <com.hjq.widget.layout.SettingBar
        android:id="@+id/fl_person_data_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_white"
        app:bar_leftText="@string/personal_data_head">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_person_data_avatar"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="end|center_vertical"
            android:layout_margin="20dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_head_placeholder" />

    </com.hjq.widget.layout.SettingBar>

    <com.hjq.widget.layout.SettingBar
        android:id="@+id/sb_person_data_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        app:bar_leftText="@string/personal_data_id"
        app:bar_rightText="880634" />

    <com.hjq.widget.layout.SettingBar
        android:id="@+id/sb_person_data_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="@string/personal_data_name"
        app:bar_rightHint="@string/personal_data_name_hint"
        app:bar_rightText="user" />

    <com.hjq.widget.layout.SettingBar
        android:id="@+id/sb_person_data_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="性别"
        app:bar_rightHint="女"
        app:bar_rightText="女" />

    <com.hjq.widget.layout.SettingBar
        android:id="@+id/sb_person_data_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="生日"
        app:bar_rightText="" />

    <com.hjq.widget.layout.SettingBar
        android:id="@+id/sb_person_data_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:bar_leftText="修改密码" />


</LinearLayout>