<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.ForgetActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/password_forget_title" />

    <com.hjq.widget.view.RegexEditText
        android:id="@+id/et_password_forget_email"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:drawableStart="@mipmap/ic_small_phone"
        android:drawablePadding="15dp"
        android:hint="@string/common_phone_input_hint"
        android:inputType="textVisiblePassword"
        android:paddingStart="20dp"
        android:paddingTop="18dp"
        android:paddingEnd="20dp"
        android:paddingBottom="18dp"
        android:singleLine="true"
        app:regexType="nonnull" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_password_forget_code"
            style="@style/EditTextStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableStart="@mipmap/ic_small_safe"
            android:drawablePadding="15dp"
            android:hint="@string/common_code_input_hint"
            android:maxLength="4"
            android:paddingStart="20dp"
            android:paddingTop="18dp"
            android:paddingEnd="20dp"
            android:paddingBottom="18dp"
            android:singleLine="true" />

        <com.hjq.widget.view.CountdownView
            android:id="@+id/cv_password_forget_countdown"
            style="@style/CountdownViewStyle" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_password_forget_commit"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:text="@string/common_step_next" />

</LinearLayout>