<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backButton="false"
        app:title="@string/home_nav_me" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_user_icon"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="24dp"
                android:src="@mipmap/ic_head_placeholder" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="user_1222"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>


        <com.hjq.widget.layout.SettingBar
            android:id="@+id/sb_person_data_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:bar_leftText="@string/personal_data_address"
            app:bar_rightHint="@string/personal_data_address_hint"
            app:bar_rightIcon="@mipmap/ico_go_black" />

        <com.hjq.widget.layout.SettingBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bar_leftText="@string/personal_data_address"
            app:bar_rightHint="@string/personal_data_address_hint"
            app:bar_rightIcon="@mipmap/ico_go_black" />

        <com.hjq.widget.layout.SettingBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bar_leftText="@string/personal_data_address"
            app:bar_rightHint="@string/personal_data_address_hint"
            app:bar_rightIcon="@mipmap/ico_go_black" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="48dp"
            android:gravity="center"
            android:text="退出登录"
            android:textSize="16dp" />


    </LinearLayout>

</LinearLayout>